Update and rename webpageaaron.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>Stretched Background Image</title>
+<title>Booty</title>
 <style type="text/css">
 /* Remove margins from the 'html' and 'body' tags, and ensure the page takes up full screen height */
 html, body {height:100%; margin:0; padding:0;}
